--- a/client/src/components/DateCheckButton/DateCheckApp/DateCheckApp.module.scss
+++ b/client/src/components/DateCheckButton/DateCheckApp/DateCheckApp.module.scss
@@ -112,7 +112,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(67, 67, 67, 0.2);
+    background-color: rgba(49, 49, 49, 0.2);
 
     .detail-wrapper {
         width: 250px;
@@ -197,6 +197,106 @@
 
                 &:hover {
                     background-color: rgb(171, 62, 62);
+                }
+            }
+        }
+    }
+}
+
+.message {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(67, 67, 67, 0.2);
+
+    .message-wrapper {
+        width: 300px;
+        background-color: white;
+        border-radius: 10px;
+        overflow: hidden;
+
+        .message-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: rgb(145, 145, 145);
+
+            .message-title {
+                font-size: 1.6rem;
+                font-weight: 600;
+                padding-left: 10px;
+            }
+
+            .message-btn {
+                padding: 10px;
+                width: 20px;
+                height: 20px;
+                transition: all 0.3s ease-in-out;
+
+                &:hover {
+                    color: rgb(226, 57, 57);
+                }
+            }
+        }
+
+        .message-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: column;
+
+            .message-content-wrapper {
+                padding-top: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                column-gap: 10px;
+
+                .message-icon-error {
+                    width: 30px;
+                    height: 30px;
+                    color: red;
+                }
+
+                .message-icon-success {
+                    width: 30px;
+                    height: 30px;
+                    color: green;
+                }
+
+                .message-desc {
+                    padding-left: 20px;
+                    max-width: 200px;
+                    font-size: 1.6rem;
+                    font-weight: 600;
+                }
+            }
+
+            .message-footer {
+                margin-top: 30px;
+                width: 100%;
+                height: 50px;
+                background-color: rgb(229, 229, 229);
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+
+                .message-submit {
+                    margin-right: 10px;
+                    padding: 6px 20px;
+                    border-radius: 10px;
+                    background-color: rgb(206, 206, 206);
+                    transition: all 0.3s ease-in-out;
+
+                    &:hover {
+                        background-color: rgb(92, 203, 157);
+                        color: white;
+                    }
                 }
             }
         }
